--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=7.1.3",
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "services/auth": "dev-master",
+        "sites/web": "dev-master"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
@@ -18,6 +20,16 @@
         "phpunit/phpunit": "~7.0",
         "symfony/thanks": "^1.0"
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./sites/web"
+        },
+        {
+            "type": "path",
+            "url": "./services/auth"
+        }
+    ],
     "autoload": {
         "classmap": [
             "database/seeds",
